# rustic-vs

./: .gitignore  Cargo.toml  LICENSE  README.md
instances/mock/: instance.toml
instances/mock-icon/: instance.toml
src/: icons.rs  instance.rs  main.rs  mods.rs  style.rs  ui.rs
