[package]
name = "rustic-vs"
version = "0.1.0"
edition = "2024"
authors = ["Akzyra"]
license = "MIT"
readme = "README.md"

[dependencies]
log = "0.4"
fern = "0.7"
humantime = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
json5 = "0.4"
zip = "4.0.0"
reqwest = { version = "0.12", features = ["cookies", "json"] }
iced = { version = "0.13", features = ["lazy", "image"] }
